perimeter_quiz/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\apache-csv.jar;C:\Program Files (x86)\BlueJ\lib\userlib\courserajava.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Usuario\Documents\BlueJ_codes\perimeter_quiz
-d
C:\Users\Usuario\Documents\BlueJ_codes\perimeter_quiz\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\Usuario\Documents\BlueJ_codes\perimeter_quiz\PerimeterAssignmentRunner.java
<---- end of javadoc command ---->
Loading source file C:\Users\Usuario\Documents\BlueJ_codes\perimeter_quiz\PerimeterAssignmentRunner.java...
C:\Users\Usuario\Documents\BlueJ_codes\perimeter_quiz\PerimeterAssignmentRunner.java:135: error: <identifier> expected
    public void main (testFileWithLargestPerimeter())))));)){
                                                  ^
C:\Users\Usuario\Documents\BlueJ_codes\perimeter_quiz\PerimeterAssignmentRunner.java:135: error: ';' expected
    public void main (testFileWithLargestPerimeter())))));)){
                                                   ^
C:\Users\Usuario\Documents\BlueJ_codes\perimeter_quiz\PerimeterAssignmentRunner.java:135: error: illegal start of type
    public void main (testFileWithLargestPerimeter())))));)){
                                                    ^
C:\Users\Usuario\Documents\BlueJ_codes\perimeter_quiz\PerimeterAssignmentRunner.java:135: error: <identifier> expected
    public void main (testFileWithLargestPerimeter())))));)){
                                                     ^
C:\Users\Usuario\Documents\BlueJ_codes\perimeter_quiz\PerimeterAssignmentRunner.java:135: error: ';' expected
    public void main (testFileWithLargestPerimeter())))));)){
                                                      ^
C:\Users\Usuario\Documents\BlueJ_codes\perimeter_quiz\PerimeterAssignmentRunner.java:135: error: illegal start of type
    public void main (testFileWithLargestPerimeter())))));)){
                                                       ^
C:\Users\Usuario\Documents\BlueJ_codes\perimeter_quiz\PerimeterAssignmentRunner.java:135: error: <identifier> expected
    public void main (testFileWithLargestPerimeter())))));)){
                                                        ^
C:\Users\Usuario\Documents\BlueJ_codes\perimeter_quiz\PerimeterAssignmentRunner.java:135: error: illegal start of type
    public void main (testFileWithLargestPerimeter())))));)){
                                                          ^
C:\Users\Usuario\Documents\BlueJ_codes\perimeter_quiz\PerimeterAssignmentRunner.java:135: error: ';' expected
    public void main (testFileWithLargestPerimeter())))));)){
                                                           ^
9 errors
